🎨 Fix button stretching inside nav

--- a/client/src/components/Button/Button.module.scss
+++ b/client/src/components/Button/Button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  @apply py-2 px-4 text-sm font-bold bg-white text-black rounded-full;
+  @apply py-2 px-4 text-sm font-bold bg-white text-black rounded-full inline-flex;
 
   &:hover {
     @apply bg-neutral-100 scale-105;
